# practices

./: .gitignore  README.md  note.md  pyproject.toml  requirements.txt
configs/base/: base.yaml
practices/: __init__.py
practices/dataset/: __init__.py
practices/dataset/base/: base_dataset.py  base_preprocessor.py  base_transform.py
practices/loss/: __init__.py
practices/loss/base/: base_loss.py
practices/metric/: __init__.py
practices/metric/base/: base_metric.py
practices/model/: __init__.py
practices/model/backbone/: resnet.py
practices/model/base/: base_model.py
practices/optimizer/: __init__.py
practices/optimizer/base/: base_optimizer.py
practices/postprocessor/: __init__.py
practices/postprocessor/base/: base_postprocessor.py
practices/scheduler/: __init__.py
practices/scheduler/base/: base_scheduler.py
practices/trainer/: __init__.py
practices/trainer/base/: base_trainer.py
practices/utils/: ast.py  build.py  check_type.py  constants.py  load_config.py  log.py  progress.py
scripts/: create_env.sh  local_install.sh  local_uninstall.sh
tests/unittests/practices/dataset/: test_init.py
tests/unittests/practices/loss/: test_init.py
tests/unittests/practices/metric/: test_init.py
tests/unittests/practices/model/: test_init.py
tests/unittests/practices/optimizer/: test_init.py
tests/unittests/practices/postprocessor/: test_init.py
tests/unittests/practices/scheduler/: test_init.py
tests/unittests/practices/trainer/: test_init.py
tests/unittests/practices/utils/: test_ast.py  test_build.py  test_check_type.py  (+1 more)
(+10 files in other folders)
