[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "practices"
version = "0.0.1"
authors = [{ name = "MoYuZai", email = "moyu.email@gamil.com" }]
description = "Deep learning practices"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools>=61.0",
    "build>=1.2.1",
    "PyYAML==6.0.1",
    "numpy==1.24.4",
    "torch==2.2.2",
    "pillow==10.3.0",
    "opencv-python==4.9.0.80",
    "matplotlib==3.7.5",
    "rich==13.9.2",
    "pyyaml==6.0.1",
    "tensorboard==2.12.0",
    "chardet==5.2.0",
    "ipywidgets==8.1.5",
]

[project.urls]
Homepage = "https://github.com/taolizhicheng/practices"
Issues = "https://github.com/taolizhicheng/practices/issues"


[tool.setuptools]
py-modules = []
packages = ["practices"]
package-dir = { "" = "." }
